added local ollama to run the chat interface

--- a/.env.example
+++ b/.env.example
@@ -11,15 +11,41 @@ VITE_SUPABASE_PUBLISHABLE_KEY="your-anon-key"
 VITE_SUPABASE_URL="https://your-project-id.supabase.co"
 
 # ====================================
+# LOCAL AI MODEL CONFIGURATION (NEW!)
+# ====================================
+# Enable local AI using Ollama instead of remote APIs
+# Set to 'true' to use local Ollama, 'false' to use remote Supabase functions
+VITE_USE_LOCAL_AI=false
+
+# Ollama server URL (default: http://localhost:11434)
+OLLAMA_BASE_URL=http://localhost:11434
+
+# Main LLM model to use (options: llama3.2, mistral, phi3, etc.)
+OLLAMA_MODEL=llama3.2
+
+# Embedding model for RAG (recommended: nomic-embed-text)
+OLLAMA_EMBEDDING_MODEL=nomic-embed-text
+
+# Setup Instructions for Local AI:
+# 1. Install Ollama from https://ollama.ai
+# 2. Run: npm run ai:install (Windows PowerShell script)
+#    OR manually: ollama pull llama3.2 && ollama pull nomic-embed-text
+# 3. Start Ollama: ollama serve
+# 4. Set VITE_USE_LOCAL_AI=true above
+# 5. Verify setup: npm run ai:setup
+
+# ====================================
 # SUPABASE EDGE FUNCTION SECRETS
 # ====================================
 # These should be set in your Supabase project dashboard under:
 # Settings > Edge Functions > Environment Variables
 
 # Required for AI chat functionality (already configured in Supabase)
+# Only needed if VITE_USE_LOCAL_AI=false
 # LOVABLE_API_KEY=your-lovable-api-key
 
 # Optional: For enhanced RAG with vector embeddings
+# Only needed if VITE_USE_LOCAL_AI=false
 # OPENAI_API_KEY=your-openai-api-key
 
 # ====================================
