booking sysytems and email notifications updated 	modified:   .env 	modified:   .env.example 	modified:   src/components/ApprovalsView.tsx 	modified:   src/components/BookingViewNew.tsx 	modified:   src/components/ChatViewNew.tsx 	new file:   src/lib/booking-service.ts 	new file:   supabase/functions/booking-notify/index.ts 	new file:   supabase/migrations/20260228170000_fix_bookings_rls_availability.sql 	new file:   supabase/migrations/20260301000000_only_two_venues.sql

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,19 @@ OLLAMA_EMBEDDING_MODEL=nomic-embed-text
 # These should be set in your Supabase project dashboard under:
 # Settings > Edge Functions > Environment Variables
 
+# ====================================
+# EMAIL NOTIFICATIONS (Nodemailer / SMTP)
+# ====================================
+# Set these in Supabase Dashboard > Edge Functions > Environment Variables
+# For Gmail: use smtp.gmail.com, port 587, and an App Password
+#   (Google Account > Security > 2-Step Verification > App Passwords)
+#
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
+# FROM_EMAIL=your-email@gmail.com
+
 # Required for AI chat functionality (already configured in Supabase)
 # Only needed if VITE_USE_LOCAL_AI=false
 # LOVABLE_API_KEY=your-lovable-api-key
