modified:   .env 	new file:   ai-model/__pycache__/main.cpython-313.pyc 	new file:   ai-model/app/__pycache__/__init__.cpython-313.pyc 	new file:   ai-model/app/__pycache__/config.cpython-313.pyc 	new file:   ai-model/app/__pycache__/document_processor.cpython-313.pyc 	new file:   ai-model/app/__pycache__/gemini_client.cpython-313.pyc 	new file:   ai-model/app/__pycache__/knowledge_base.cpython-313.pyc 	new file:   ai-model/app/__pycache__/models.cpython-313.pyc 	new file:   ai-model/app/__pycache__/rag_service.cpython-313.pyc 	new file:   ai-model/app/__pycache__/vector_store.cpython-313.pyc 	modified:   ai-model/app/config.py 	new file:   ai-model/app/gemini_client.py 	modified:   ai-model/app/rag_service.py 	modified:   ai-model/main.py 	modified:   src/lib/chat-stream.ts 	modified:   supabase/functions/chat-rag/index.ts

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ SMTP_PASS="ynxhgirtmewbppf"
 FROM_EMAIL="f20240884@goa.bits-pilani.ac.in"
 # Local AI
 VITE_USE_LOCAL_AI=true
+
+# Gemini API Key (get yours at https://aistudio.google.com/apikey)
+GEMINI_API_KEY="AIzaSyBK5ivimnID-Qq4V4iTYDZagUa1t87vRNM"
